# unitree_deployment

./: .gitignore  README.md
deploy/include/: unitree_articulation.h
deploy/include/FSM/: State_RLBase.h
deploy/include/isaaclab/algorithms/: algorithms.h
deploy/include/isaaclab/assets/articulation/: articulation.h
deploy/include/isaaclab/envs/mdp/observations/: observations.h
deploy/include/isaaclab/manager/: observation_manager.h
deploy/robots/g1_29dof/config/: config.yaml
deploy/robots/g1_29dof/config/policy/velocity/amp_symmetry/exported/: policy.onnx
deploy/robots/g1_29dof/config/policy/velocity/amp_symmetry/params/: deploy.yaml
deploy/robots/g1_29dof/config/policy/velocity/multi_amp/exported/: policy.onnx
deploy/robots/g1_29dof/config/policy/velocity/multi_amp/params/: deploy.yaml
deploy/robots/g1_29dof/src/: State_RLBase.cpp
deploy/robots/go2/: CMakeLists.txt
deploy/robots/go2/config/: config.yaml
deploy/robots/go2/config/policy/velocity/cts/exported/: policy.onnx
deploy/robots/go2/config/policy/velocity/cts/params/: deploy.yaml
deploy/robots/go2/config/policy/velocity/cts_gait/exported/: policy.onnx
deploy/robots/go2/config/policy/velocity/cts_gait/params/: deploy.yaml
deploy/robots/go2/config/policy/velocity/dwaq_flat/exported/: policy.onnx
deploy/robots/go2/config/policy/velocity/dwaq_flat/params/: deploy.yaml
deploy/robots/go2/src/: State_RLBase.cpp
